@@ -1,0 +1,15 @@
+
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Banter
+_Comment=Real Time Collaboration Tool
+_GenericName=Instant Messenger AddressBook
+Exec=banter
+Icon=banter
+StartupNotify=false
+Terminal=false
+Type=Application
+Categories=Network;InstantMessaging;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=banter
+X-GNOME-Bugzilla-Component=General
